# oneengine

./: .gitignore  Cargo.toml  LICENSE  README.md  SYSTEM_INTEGRATION_COMPLETE.md  SYSTEM_INTEGRATION_SUMMARY.md  add_license_headers.sh  config.yaml  run_integration_tests.sh
benches/: columnar_bench.rs  hash_agg_bench.rs  hash_join_bench.rs  local_shuffle_bench.rs  memory_management_bench.rs  performance_benchmarks.rs  scheduler_bench.rs  topn_bench.rs
docs/: INTEGRATION_TEST_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  SYSTEM_INTEGRATION_SUMMARY.md
examples/: arrow_push_example.rs  basic_usage.rs  columnar_execution.rs  complete_vectorized_integration.rs  comprehensive_optimization_example.rs  comprehensive_system_integration_test.rs  data_lake_reader_example.rs  end_to_end_integration.rs  hash_aggregation.rs  iceberg_integration_example.rs  integrated_engine_example.rs  local_shuffle_example.rs  m0_complete_pipeline.rs  m1_hash_join_example.rs  m1_local_shuffle_example.rs  m1_runtime_filter_example.rs  m1_sort_topn_example.rs  m2_spill_integration_example.rs  m3_flight_exchange_example.rs  m4_adaptive_batch_example.rs  m4_join_adaptation_example.rs  m4_skew_handling_example.rs  memory_management_example.rs  minimal_validation.rs  orc_reader_example.rs  parquet_arrow_integration.rs  performance_benchmark_example.rs  simd_optimization_example.rs  simple_benchmark_example.rs  simple_memory_example.rs  simple_validation.rs  topn_example.rs  unified_lake_reader_example.rs  vectorized_operators_example.rs
src/: lib.rs  main.rs
src/arrow_operators/: filter_project.rs  hash_aggregation.rs  hash_join.rs  local_shuffle.rs  mod.rs  scan_parquet.rs  sort_topn.rs  spill_manager.rs
src/columnar/: batch.rs  column.rs  encoding.rs  mod.rs  simd.rs  types.rs
src/concurrency/: concurrent_structures.rs  mod.rs  optimization.rs
src/core/: engine.rs  mod.rs  operator.rs  pipeline.rs  task.rs
src/datalake/: mod.rs  unified_lake_reader.rs
src/execution/: adaptive_batching.rs  context.rs  driver.rs  engine.rs  executor.rs  extreme_observability.rs  integrated_engine.rs  mod.rs  mpp_engine.rs  numa_pipeline.rs  operator.rs  performance_monitor.rs  pipeline.rs  pipeline_executor.rs  scheduler.rs  skew_handling.rs  task.rs  task_operator.rs  vectorized_driver.rs  vectorized_operator.rs  worker.rs
src/executor/: executor.rs  mod.rs  operator.rs  vectorized_driver.rs  worker.rs
src/expression/: mod.rs
src/io/: arrow_ipc.rs  data_lake_reader.rs  flight_exchange.rs  flight_server.rs  iceberg_integration.rs  mod.rs  orc_reader.rs  parquet_reader.rs  vectorized_scan_operator.rs  vectorized_scan_operator.rs.backup
src/ipc/: arrow_ipc.rs  flight_exchange.rs  flight_server.rs  mod.rs
src/memory/: allocator.rs  backpressure_controller.rs  gc.rs  memory_pool.rs  mod.rs  spill_manager.rs  unified_memory_manager.rs
src/network/: mod.rs  optimization.rs  server.rs
src/optimization/: compressed_compute.rs  mod.rs  simd.rs
src/performance/: benchmark_runner.rs  mod.rs
src/protocol/: adapter.rs  flink.rs  mod.rs  presto.rs  spark.rs  trino.rs
src/push_runtime/: credit_manager.rs  event_loop.rs  metrics.rs  mod.rs  operator_context.rs  outbox.rs
src/scheduler/: mod.rs  pipeline_manager.rs  push_scheduler.rs  resource_manager.rs  task_queue.rs
src/serialization/: columnar_serialization.rs  mod.rs  optimization.rs
src/simd/: compressed_compute.rs  mod.rs  simd.rs
srcbak/: numa_pipeline.rs
tests/: README.md  complete_vectorized_integration.rs  comprehensive_system_integration_test.rs  end_to_end_integration.rs  parquet_arrow_integration.rs  unified_execution_test.rs  vectorized_pipeline_integration.rs
(+95 files in other folders)
