[package]
name = "oneengine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A unified native engine for Spark, Flink, Trino, and Presto workers"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# Networking
tonic = "0.10"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Concurrency and synchronization
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"

# Memory management
bytes = "1.5"
mimalloc = { version = "0.1", default-features = false }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hashbrown = "0.14"
num_cpus = "1.16"
serde_yaml = "0.9"
smallvec = "1.11"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "scheduler_bench"
harness = false

[[bench]]
name = "columnar_bench"
harness = false

[[bench]]
name = "hash_agg_bench"
harness = false

[[bench]]
name = "topn_bench"
harness = false

[[bench]]
name = "local_shuffle_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
