[package]
name = "oneengine"
version = "0.1.0"
edition = "2021"
authors = ["liuzonghao <ludo.arnk@gmail.com>"]
description = "A unified native engine for Spark, Flink, Trino, and Presto workers"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# Networking
tonic = "0.10"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Concurrency and synchronization
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"

# Apache Arrow ecosystem
arrow = { version = "53.4", features = ["ipc"] }
parquet = { version = "53.4", features = ["arrow"] }
arrow-flight = "53.4"
arrow-row = "53.4"
async-stream = "0.3"
tokio-stream = "0.1"

# DataFusion integration
datafusion-common = "39.0"

# JIT compilation
cranelift = "0.100"
cranelift-jit = "0.100"
cranelift-module = "0.100"
cranelift-native = "0.100"

# ORC support
orc-rs = "0.1.5"

# Iceberg support
iceberg = "0.4"
object_store = "0.10"
avro-rs = "0.13"

# Memory management
bytes = "1.5"
jemalloc = { version = "0.3", optional = true }
jemalloc-sys = { version = "0.3", optional = true }
lz4_flex = "0.11"
zstd = "0.13"
flate2 = "1.0"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
num_cpus = "1.16"
hashbrown = "0.14"
serde_yaml = "0.9"
smallvec = "1.11"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
